[gd_scene load_steps=17 format=2]

[ext_resource path="res://Entities/Enemies/DrillMachine/DrillMachine.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/DrillMachine/DrillMachine.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/DrillMachine/Drill.png" type="Texture" id=3]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=7]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=8]
[ext_resource path="res://Managing/Colliders/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/Enemies/Assets/EnemyOutline.tres" type="Material" id=10]

[sub_resource type="CircleShape2D" id=3]
radius = 96.7471

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 4 )

[sub_resource type="CircleShape2D" id=6]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite/Drill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 11 ), Vector2( 0, 12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ) ]
}

[node name="DrillMachine" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
speed = 1200.0
attackSpeed = 280.0
kbAmount = 0.0
accel = 24.0
friction = 12.0
wanderRange = 32

[node name="ScaleHelper" type="Node2D" parent="."]
scale = Vector2( 0.953553, 1.04645 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
material = ExtResource( 10 )
position = Vector2( 0, -0.464466 )
texture = ExtResource( 2 )

[node name="Drill" type="Sprite" parent="ScaleHelper/Sprite"]
show_behind_parent = true
material = ExtResource( 10 )
position = Vector2( 0, 11.6967 )
texture = ExtResource( 3 )
hframes = 2

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="Hitbox" parent="Collisions" instance=ExtResource( 6 )]
position = Vector2( 0, 11 )
collision_layer = 4
collision_mask = 2
damage = 1

[node name="CollisionShape2D" parent="Collisions/Hitbox" index="0"]
shape = SubResource( 5 )

[node name="SoftCollision" parent="Collisions" instance=ExtResource( 9 )]

[node name="CollisionShape2D" parent="Collisions/SoftCollision" index="0"]
shape = SubResource( 6 )

[node name="BounceRay" type="RayCast2D" parent="Collisions"]
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Timers" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DefendTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -15.0
margin_right = 9.0
margin_bottom = -10.0
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )

[connection signal="hurt" from="Collisions/Hurtbox" to="." method="_on_hurt"]
[connection signal="timeout" from="Timers/WanderTimer" to="." method="_on_wander_timer_timeout"]

[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/Hurtbox"]
[editable path="Collisions/Hitbox"]
[editable path="Collisions/SoftCollision"]
